<resources>
    <string name="app_name">Nearby Pets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Activity Name-->
    <string name="activity_category">Categories</string>
    <string name="activity_forgot_pass">Forgot Password</string>
    <string name="activity_login">Login</string>
    <string name="activity_post_ad">Post an Ad</string>
    <string name="activity_product_desc">Product Description</string>
    <string name="activity_product_list">Product List</string>
    <string name="activity_register">Register</string>
    <string name="activity_setting">Settings</string>
    <string name="activity_profile">User Profile</string>
    <string name="activity_main">Dashboard</string>
    <!-- Nav drawer -->
    <string name="nav_opt_my_details">My Profile</string>
    <string name="nav_opt_my_posted_ads">My Posted Ads</string>
    <string name="nav_opt_my_saved_ads">My Favorite Ads</string>

    <string name="nav_opt_view_categories">View Categories</string>
    <string name="nav_opt_post_new_ad">Post a new ad</string>
    <string name="nav_opt_logout">Logout</string>
    <!-- end drawer-->

    <!--Product Description -->
    <string name="str_product_title">Product Title</string>
    <string name="str_product_price">\u20ac 300</string>
    <string name="str_demotext">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim
        ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="str_seller_information">Seller Information</string>
    <string name="str_name">Name:</string>
    <string name="str_telephone">Telephone:</string>
    <string name="str_email">Email:</string>
    <string name="str_ad_details">Ad Details</string>
    <string name="str_added">Added:</string>
    <string name="str_views">Views:</string>
    <string name="str_distance">Distance:</string>
    <string name="btn_add_to_favorites">Add To Favorites</string>
    <!--End Product Description-->
    <!--Login Activity -->
    <string name="str_nearby">NEARBY</string>
    <string name="str_pets">PETS</string>
    <string name="str_find_pets">FIND PETS,NEAR YOU!</string>
    <string name="str_user_name_hint">User Name</string>
    <string name="str_user_password">Password</string>
    <string name="str_user_forgot_password">Forgot password?</string>
    <string name="str_login_btn">Login</string>
    <string name="str_nearby_pets">New to nearby pets?</string>
    <string name="str_create_acc">Create Account</string>
    <!--Register Activity -->
    <string name="str_first_name_hint">FIRST NAME</string>
    <string name="str_last_name_hint">LAST NAME</string>
    <string name="str_phone_hint">PHONE</string>
    <string name="str_email_hint">EMAIL</string>
    <string name="str_password_hint">PASSWORD</string>
    <string name="str_register_hint">REGISTER</string>
    <!--category Activity-->
    <string name="search_category">Search Category</string>

    <!--product list activity -->
    <string name="str_product_list_desc">Lorem ipsum dolor sit amet,consectetur adipiscing elit.</string>
    <string name="str_product_list_dist">10 km away from you</string>
    <string name="str_product_date">Posted On 14/05/2016</string>
    <string name="str_view_all">VIEW ALL</string>
    <string name="str_euro_price_symbol">\u20ac</string>
    <string name="str_heart_symbol">\u2764</string>

    <!--Forgot Password-->
    <string name="str_forgot_pwd_hint">ENTER YOUR EMAIL</string>
    <string name="str_resend_btn">RESEND MY PASSWORD</string>
    <!--post my addes-->
    <string name="str_favourite">Favourite</string>
    <!--facebook app id-->
    <string name="facebook_app_id">1715459422041023</string>
    <string name="GPSAlertDialogTitle">Track Location</string>
    <string name="GPSAlertDialogMessage">Start gps tracker for get your location</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_user_setting">UserSettingActivity</string>
    <string name="str_no_add_in_radius">No more ads in your radius</string>
</resources>
