<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginTransparnt"
        android:gravity="center_vertical|top"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <com.nearbypets.views.AbelRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_nearby"
                android:textSize="52sp"
                android:textColor="@android:color/white"
                android:id="@+id/textView2"
                android:layout_gravity="center"/>
            <com.nearbypets.views.AbelRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_pets"
                android:textSize="52sp"
                android:textColor="@android:color/white"
                android:id="@+id/textView3"
                android:layout_marginTop="-16dp"
                android:layout_gravity="center"/>
            <com.nearbypets.views.MyriadProRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/str_find_pets"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:id="@+id/textView4"
                android:background="@drawable/custom_white_border"
                android:layout_gravity="center"/>
        </LinearLayout>




    </LinearLayout>


</ScrollView>