<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginTransparnt"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_nearby"
                android:textColor="@android:color/white"
                android:id="@+id/textView2"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_pets"
                android:textColor="@android:color/white"
                android:id="@+id/textView3"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/str_find_pets"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:id="@+id/textView4"
                android:background="@drawable/custom_white_border"
                android:layout_gravity="center"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/firstNameLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/custom_white_border"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_firstNamedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@android:color/white"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat">

                    <EditText
                        android:id="@+id/firstNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:hint="@string/str_first_name_hint"
                        android:textColorHint="@android:color/white"
                        android:inputType="textEmailAddress"
                        android:paddingStart="5dp"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/passdLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_white_border"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_lastNameIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@android:color/white">

                    <EditText
                        android:id="@+id/lastNameIdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:hint="@string/str_last_name_hint"
                        android:inputType="textEmailAddress"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_white_border"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@android:color/white">

                    <EditText
                        android:id="@+id/phoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:hint="@string/str_phone_hint"
                        android:inputType="textEmailAddress"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/emailIdLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_white_border"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_emailIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@android:color/white">

                    <EditText
                        android:id="@+id/emailIdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:hint="@string/str_email_hint"
                        android:inputType="textEmailAddress"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_white_border"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="@android:color/white">

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="10dp"
                        android:hint="@string/str_password_hint"
                        android:inputType="textEmailAddress"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="end">



                <Button
                    android:id="@+id/register_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_white_border"
                    android:text="@string/str_register_hint"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>





        </LinearLayout>
    </LinearLayout>


</ScrollView>

