<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_pet_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.nearbypets.views.RobotoMediumTextView
                            android:id="@+id/txtProductTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:padding="2dp"
                            android:text="@string/str_product_title"
                            android:textColor="@color/primaryText"
                            android:textSize="16sp" />

                        <com.nearbypets.views.RobotoMediumTextView
                            android:id="@+id/txtProductPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:padding="2dp"
                            android:text="@string/str_product_price"
                            android:textColor="@color/accentText"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.nearbypets.views.RobotoRegularTextView
                            android:id="@+id/txtDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:padding="1dp"
                            android:text="@string/str_product_list_desc"
                            android:textColor="@color/secondaryText"
                            android:textSize="13sp" />

                        <ImageView
                            android:id="@+id/imgFavourite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="6dp"
                            android:padding="2dp"
                            android:src="@drawable/ic_favorite_black_24dp" />
                    </LinearLayout>

                    <com.nearbypets.views.RobotoItalicTextView
                        android:id="@+id/txtDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:text="@string/str_product_list_dist"
                        android:textColor="@color/primaryText"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnHideAd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="14dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/button_custom"
                android:paddingLeft="34dp"
                android:paddingRight="34dp"
                android:text="Hide"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>